artifacthub/library/general/storageclass/1.1.2/samples/storageclass-allowlist/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sStorageClass
metadata:
  name: allowed-storageclass
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["PersistentVolumeClaim"]
      - apiGroups: ["apps"]
        kinds: ["StatefulSet"]
  parameters:
    includeStorageClassesInMessage: true
    allowedStorageClasses:
      - allowed-storage-class
